--- a/Code_and_analysis.ipynb
+++ b/Code_and_analysis.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/atulchander/Data-Visualisation-and-Exploiratory-Data-Analysis-EAD-by-using-Python/blob/main/Code_and_analysis.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/atulchander/Data-Visualization-and-Exploratory-Data-Analysis-EDA-Using-Python/blob/main/Code_and_analysis.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -485,7 +485,7 @@
         "id": "c3kenV4vJY_Q"
       },
       "source": [
-        "### **Question 1:** How many rows and columns are present in the data? [0.5 mark]"
+        "### **Rows and columns in the data**"
       ]
     },
     {
@@ -533,7 +533,7 @@
         "id": "jRXakVrUJY_R"
       },
       "source": [
-        "### **Question 2:** What are the datatypes of the different columns in the dataset? (The info() function can be used) [0.5 mark]"
+        "### **Datatypes of the different columns in the dataset**"
       ]
     },
     {
@@ -590,7 +590,7 @@
         "id": "pF_92MN6JY_S"
       },
       "source": [
-        "### **Question 3:** Are there any missing values in the data? If yes, treat them using an appropriate method. [1 mark]"
+        "### **Evaluate missing values in the data**"
       ]
     },
     {
@@ -646,7 +646,7 @@
         "id": "MnJo7MWrJY_S"
       },
       "source": [
-        "### **Question 4:** Check the statistical summary of the data. What is the minimum, average, and maximum time it takes for food to be prepared once an order is placed? [2 marks]"
+        "### **Check the statistical summary of the data. What is the minimum, average, and maximum time it takes for food to be prepared once an order is placed**"
       ]
     },
     {
@@ -1023,7 +1023,7 @@
         "id": "cw3l58z_JY_T"
       },
       "source": [
-        "### **Question 5:** How many orders are not rated? [1 mark]"
+        "### **How many orders are not rated**"
       ]
     },
     {
@@ -1133,7 +1133,7 @@
         "id": "7msIfXE-JY_T"
       },
       "source": [
-        "### Exploratory Data Analysis (EDA)"
+        "## **Exploratory Data Analysis (EDA)**"
       ]
     },
     {
@@ -1151,7 +1151,7 @@
         "id": "0RHZnugBJY_U"
       },
       "source": [
-        "### **Question 6:** Explore all the variables and provide observations on their distributions. (Generally, histograms, boxplots, countplots, etc. are used for univariate exploration.) [9 marks]"
+        "### **Exploring all the variables and provide observations on their distributions. (Generally, histograms, boxplots, countplots, etc. are used for univariate exploration.)**"
       ]
     },
     {
@@ -1423,7 +1423,7 @@
         "id": "jisCBjqfCCC9"
       },
       "source": [
-        "#HISTOGRAM AND BOXPLOTS"
+        "### **HISTOGRAM AND BOXPLOTS**"
       ]
     },
     {
@@ -1432,7 +1432,7 @@
         "id": "-60MedVWCa-3"
       },
       "source": [
-        "## Cuisine Type"
+        "## Counting for cuisine type"
       ]
     },
     {
@@ -1840,7 +1840,7 @@
         "id": "K9CqA5H_JY_U"
       },
       "source": [
-        "### **Question 7**: Which are the top 5 restaurants in terms of the number of orders received?"
+        "### **Which are the top 5 restaurants in terms of the number of orders received?**"
       ]
     },
     {
@@ -1903,7 +1903,7 @@
         "id": "gWPMqGq0JY_U"
       },
       "source": [
-        "### **Question 8**: Which is the most popular cuisine on weekends?"
+        "### **Which is the most popular cuisine on weekends?**"
       ]
     },
     {
@@ -2343,7 +2343,7 @@
         "id": "88xgTqkxJY_U"
       },
       "source": [
-        "### **Question 9**: What percentage of the orders cost more than 20 dollars?"
+        "### **What percentage of the orders cost more than 20 dollars?**"
       ]
     },
     {
@@ -2391,7 +2391,7 @@
         "id": "HFyHn7hsJY_V"
       },
       "source": [
-        "### **Question 10**: Mean order delivery time"
+        "### **Mean order delivery time**"
       ]
     },
     {
@@ -2436,7 +2436,7 @@
         "id": "48IjaOuDJY_V"
       },
       "source": [
-        "### **Question 11:** Identify IDs of top 3 customers for company to give 20% discount vouchers"
+        "### **Identify IDs of top 3 customers for company to give 20% discount vouchers**"
       ]
     },
     {
@@ -2490,7 +2490,7 @@
         "id": "AfIc2jPaJY_V"
       },
       "source": [
-        "# Multivariate Analysis"
+        "# **Multivariate Analysis**"
       ]
     },
     {
@@ -2499,7 +2499,7 @@
         "id": "iqiS0RT_JY_V"
       },
       "source": [
-        "### **Question 12**: Multivariate analysis to explore relationships between the important variables in the dataset."
+        "### **Multivariate analysis to explore relationships between the important variables in the dataset**"
       ]
     },
     {
@@ -2911,47 +2911,6 @@
         "\n",
         "# Show the plot\n",
         "plt.show()"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "PI7KlqL1_iOZ",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "31ac522d-deaa-4afa-eee2-4f635004d2f2"
-      },
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "restaurant_name\n",
-              "Shake Shack                     3579.53\n",
-              "The Meatball Shop               2145.21\n",
-              "Blue Ribbon Sushi               1903.95\n",
-              "Blue Ribbon Fried Chicken       1662.29\n",
-              "Parm                            1112.76\n",
-              "RedFarm Broadway                 965.13\n",
-              "RedFarm Hudson                   921.21\n",
-              "TAO                              834.50\n",
-              "Han Dynasty                      755.29\n",
-              "Blue Ribbon Sushi Bar & Grill    666.62\n",
-              "Rubirosa                         660.45\n",
-              "Sushi of Gari 46                 640.87\n",
-              "Nobu Next Door                   623.67\n",
-              "Five Guys Burgers and Fries      506.47\n",
-              "Name: cost_of_the_order, dtype: float64"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 43
-        }
-      ],
-      "source": [
-        "df.groupby(['restaurant_name'])['cost_of_the_order'].sum().sort_values(ascending = False).head(14)"
       ]
     },
     {
@@ -4220,7 +4179,7 @@
         "id": "1gvWBkRUJY_V"
       },
       "source": [
-        "### **Question 14:** The company charges the restaurant 25% on the orders having cost greater than 20 dollars and 15% on the orders having cost greater than 5 dollars. Find the net revenue generated by the company across all orders. [3 marks]"
+        "### **The company charges the restaurant 25% on the orders having cost greater than 20 dollars and 15% on the orders having cost greater than 5 dollars. Hence lets find the net revenue generated by the company across all orders.**"
       ]
     },
     {
@@ -4638,7 +4597,7 @@
         "id": "pRlVW-oeJY_W"
       },
       "source": [
-        "### **Question 15:** The company wants to analyze the total time required to deliver the food. What percentage of orders take more than 60 minutes to get delivered from the time the order is placed? (The food has to be prepared and then delivered.) [2 marks]"
+        "### **The company wants to analyze the total time required to deliver the food. What percentage of orders take more than 60 minutes to get delivered from the time the order is placed? (The food has to be prepared and then delivered.)**"
       ]
     },
     {
@@ -5062,7 +5021,7 @@
         "id": "bUd6cYpPJY_W"
       },
       "source": [
-        "### **Question 16:** How does the mean delivery time vary during weekdays and weekends?"
+        "### **How does the mean delivery time vary during weekdays and weekends?**"
       ]
     },
     {
@@ -5111,17 +5070,8 @@
         "id": "17roJywaJY_W"
       },
       "source": [
-        "### Conclusion and Recommendations\n",
+        "### **Conclusion and Recommendations**\n",
         "Mean delivery time on weekdays is more compared to weekends and it may be the reason of low rate of orders on weekdays. But here is need to figure out the reason behind less orders being placed apart from weekend-mode.\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "ZdX2Wz4FJY_W"
-      },
-      "source": [
-        "### **Question 17:** Conclusions from the analysis? What recommendations would you like to share to help improve the business?"
       ]
     },
     {
